--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="textColumn">
       <h1>WELCOME</h1>
       <p>Amir Sayyad</p>
-      <p>Test Elastic Beanstalk</p>
+      <p>Test Elastic Beanstalk Version 2.0</p>
     </div>
     <div class="linksColumn">
       <h2>What's Next?</h2>
